fix: navigation buttons on mobile

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -68,6 +68,7 @@
 }
 
 .navButton {
+  padding: 0;
   outline: none;
   box-shadow: none;
   border: none;
